# openai-agents-ext

./: README.md  pyproject.toml
examples/: README.md  agents_as_stream_tools.py  stream_tools.py
src/agents_ext/: __init__.py  ext.py
